refactor: RequestParam으로 enum을 받도록 수정